[package]
name = "chip_8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
crossterm = "0.26.1"
env_logger = "0.10.0"
rand = "0.8.5"
resize = "0.7.4"
rgb = "0.8.36"
tui = "0.19.0"
